--- a/views/tocurrency.erb
+++ b/views/tocurrency.erb
@@ -5,8 +5,11 @@ Go <a href="/">back</a>.
     <% @simbtwo.each do |printwo|%>
       <%@listwo = printwo.at(1)%>
       <%@cdetwo = @listwo.fetch("code")%>
-      <li>
-      <a href="/<%=@cde%>/<%=@cdetwo%>">convert 1 <%=@cde%> to  <%=@cdetwo%>...</a>
-      </li>
+      <%if @cde == @cdetwo%>
+      <%else%>
+        <li>
+        <a href="/<%=@cde%>/<%=@cdetwo%>">convert 1 <%=@cde%> to  <%=@cdetwo%>...</a>
+        </li>
+      <%end%>
     <%end%>
 </ul>
